# ds-frontend

./: .dockerignore  .environment  .eslintrc.js  .example.env  .flake8  .gitignore  .platform.app.yaml  .prettierignore  .stylelintrc  Dockerfile  Dockerfile.local  README.md  _ruff.toml  config.py  docker-compose.yml  eslint.config.mjs  etna.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  ruff.toml  stylelint.config.mjs  webpack.config.js
.github/workflows/: branch-cleanup.yml  cd.yml  deploy-docs.yml  pr.yml  remove-untagged.yml
.platform/: routes.yaml
app/: __init__.py
app/about/: __init__.py  routes.py
app/catalogue/: __init__.py  api.py  routes.py
app/cms/: __init__.py  breadcrumbs.py  routes.py
app/dev/: __init__.py  routes.py
app/error_pages/: __init__.py  routes.py
app/eventbrite/: api.py
app/explore/: __init__.py  render.py  routes.py
app/feedback/: __init__.py  api.py  decorators.py  routes.py
app/feeds/: __init__.py  routes.py
app/help/: __init__.py  routes.py
app/legal/: __init__.py  routes.py
app/lib/: __init__.py  abbreviations.py  api.py  breadcrumbs.py  cache.py  cache_key_prefix.py  content_parser.py  context_processor.py  date_time.py  datetime.py  flagsmith.py  pagination.py  pagination_list.py  query.py  talisman.py  template_filters.py  util.py  wagtail.py  xml.py
app/main/: __init__.py  routes.py
app/search/: __init__.py  api.py  lib.py  routes.py
app/search_site/: __init__.py  routes.py
app/site/: __init__.py  routes.py
app/site_search/: __init__.py  routes.py
app/sitemaps/: __init__.py  routes.py
app/static/: manifest.json  offline.html  robots.txt  sitemap.xsl
app/templates/: 404.html  article.html  base.html  explore-category-index.html  explore-category.html  explore.html  focused-article.html  home.html  simple.html  stories.html  wagtail_base.html  welcome.html
app/wagtail/: __init__.py  api.py  lib.py  render.py  routes.py
docs/: dependencies.md  index.md  routes.md  structure.md  templates.md
src/scripts/: analytics.js  app.js  article.js  code.js  cookies.js  education.js  event.js  events.js  exhibition.js  feedback.js  footnotes.js  main.js  media.js  offline.js  record-article.js  search.js  secondary-navigation.js  sections-sidebar.js  sentry.js  service-worker.js  sidebar.js  video.js
src/styles/: app.scss  blog.scss  (+27 more)
(+330 files in other folders)
