[tool.poetry]
name = "ds-etna-frontend"
version = "0.1.0"
description = ""
authors = ["Andrew Hosgood <andrew.hosgood@nationalarchives.gov.uk>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^2.3.2"
black = "^24.3.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
requests = "^2.31.0"
flask-caching = "^2.1.0"
tna-frontend-jinja = "0.1.32"
flask-talisman = "^1.1.0"
pytest = "^8.1.1"
requests-mock = "^1.12.1"
sentry-sdk = {extras = ["flask"], version = "^2.5.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = [
    "test",
]
