[tool.poetry]
name = "ds-frontend"
version = "0.1.0"
description = ""
authors = ["Andrew Hosgood <andrew.hosgood@nationalarchives.gov.uk>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.1.0"
requests = "^2.31.0"
tna-frontend-jinja = "0.29.1"
flask-talisman = "^1.1.0"
sentry-sdk = {extras = ["flask"], version = "^2.8.0"}
pydash = "^8.0.3"
redis = "^6.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
requests-mock = "^1.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = [
    "test",
]
