[tool.poetry]
name = "ds-frontend"
version = "0.1.0"
description = ""
authors = ["Andrew Hosgood <andrew.hosgood@nationalarchives.gov.uk>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"
aiohttp = "^3.9.0"
requests = "^2.31.0"
tna-frontend-jinja = "0.39.0"
sentry-sdk = {extras = ["flask"], version = "^2.8.0"}
pydash = "^8.0.3"
redis = "^6.0.0"
tna-utilities = {extras = ["flask"], version = "^1.4.0"}

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = ">=8.1.1,<10.0.0"
aioresponses = "^0.7.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = [
    "test",
]
